refactor: minor improvments
